  [Michele Simionato]
  * Backported fix to `import_gmfs_csv`, which was breaking sometimes with a
    filtered site collection

python3-oq-engine (3.16.6-1~xenial01) xenial; urgency=low

  [Paolo Tormene]
  * Fixed bug #8907: unable to run ClassicalDamage demo on Windows

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org> Thu, 20 Jul 2023 12:51:10 +0000

python3-oq-engine (3.16.5-1~xenial01) xenial; urgency=low

  [Matteo Nastasi]
  * Fixed the IPT error "ClearableFileInput doesn't support uploading multiple
    files" caused by the upgrade to Django >= 3.2.19

  [Antonio Ettorre]
  * Upgraded Django version to version 3.2.20 with some security fixes

  [Kendra Johnson]
  * Added `DEFINED_FOR_INTENSITY_MEASURE_COMPONENT = const.IMC.RotD50` to
    the NGAEast and NSHMP2014 GMPEs

  [Michele Simionato]
  * Fixed the hanging of classical calculations due to large zmq packets

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Tue, 11 Jul 2023 09:14:09 +0000

python3-oq-engine (3.16.4-1~xenial01) xenial; urgency=low

  [Antonio Ettorre]
  * Upgraded Django version to version 3.2.19 with some security fixes

  [Claudio Schill]
  * Fixed sorting bug in the sigma_mu adjustment factor in
    the Kuehn et al. (2020) GMM

  [Graeme Weatherill]
  * Fixes to bchydro_2016_epistemic, eshm20_craton and lanzano_2019

  [Marco Pagani]
  * Fixed bug in get_profiles_from_simple_fault_data affecting KiteSurfaces

  [Michele Simionato]
  * Fixed tau-phi inversion in LanzanoLuzi2019
  * Fixed shakemap calculations to take the risk IMTs and not the hazard IMTs
  * Removed sorting of the sections in the multiFaultSource reader to keep
    the rup_idxs consistent with the order in the files
  * GMFs too small to produce losses now give a warning rather than an error
  * Fixed a subtle filtering bug breaking conditioned GMFs
  * Fixed bug in `get_ry0_distance` breaking conditioned GMFs
  * Fixed the rupture exporter in presence of GMPETables